--- a/views/index.html
+++ b/views/index.html
@@ -210,7 +210,7 @@
         <div class="col-md-12">
           <div class="card-section">
             <div class="card text-center">
-              <img src="public/launching.png">
+              <img src="/public/launching.png">
               <h2>Launch</h2>
               <p>Launcher for Search</p>
               <p>Power Cloner</p>
@@ -218,7 +218,7 @@
               <p>Launcher for Social</p>
             </div>
             <div class="card text-center">
-              <img src="public/management.png">
+              <img src="/public/management.png">
               <h2>Manage</h2>
               <p>Custom KPI-s</p>
               <p>Search Queries</p>
@@ -226,7 +226,7 @@
               <p>Calculated Columns</p>
             </div>
             <div class="card text-center">
-              <img src="public/automation.png">
+              <img src="/public/automation.png">
               <h2>Optimize</h2>
               <p>Bid & Budget Optimization</p>
               <p>Budget Distribution</p>
@@ -234,7 +234,7 @@
               <p>Dynamic Campaigns</p>
             </div>
             <div class="card text-center">
-              <img src="public/reporting.png">
+              <img src="/public/reporting.png">
               <h2>Report</h2>
               <p>Template Builder</p>
               <p>Report Scheduling</p>
@@ -242,7 +242,7 @@
               <p>Social Reports</p>
             </div>
             <div class="card text-center">
-              <img src="public/integration.png">
+              <img src="/public/integration.png">
               <h2>Integrate</h2>
               <p>Call Tracking</p>
               <p>API</p>
