fixing footer image paths

--- a/views/index.html
+++ b/views/index.html
@@ -300,13 +300,13 @@
       </div>
       <div class="row">
         <div class="col-md-12 industry-images">
-          <img src="/img/vector.png">
-          <img src="/img/hanapin.png">
-          <img src="/img/seer.png">
-          <img src="/img/bfo.png">
-          <img src="/img/local-search-group.png">
-          <img src="/img/mudd.png">
-          <img src="/img/yellow-pages.png">
+          <img src="public/img/vector.png">
+          <img src="public/img/hanapin.png">
+          <img src="public/img/seer.png">
+          <img src="public/img/bfo.png">
+          <img src="public/img/local-search-group.png">
+          <img src="public/img/mudd.png">
+          <img src="public/img/yellow-pages.png">
         </div>
       </div>
     </div>
