--- a/views/index.html
+++ b/views/index.html
@@ -122,7 +122,7 @@
             {% else %} 
             <h3>Start your Demo</h3>
             
-            <h5>Enter your personalized code to get started</h5>
+            <h5>Enter your personalized blah code to get started</h5>
             <div class="row demo-code">
               <div class="col-xs-9 input-container">
                 <input type="text" required="" name="enterCode" placeholder="ENTER CODE" class="your-demo-code">
