--- a/views/index.html
+++ b/views/index.html
@@ -97,7 +97,7 @@
             {% if repName|length %}
             
             {% endif %}
-            {% if 2 === 3 %}
+            {% if 2 === 2 %}
             <div class="row demo-code">
               <div class="col-md-3 rep-photo">
                 <svg id="4aa5eea2-ef9f-400f-ac2e-5f9c91abaabb" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="83.7" height="80.1" viewBox="0 0 83.7 80.1">
@@ -122,7 +122,7 @@
             {% else %} 
             <h3>Start your Demo</h3>
             
-            <h5>Enter your personalized blah code to get started</h5>
+            <h5>Enter your personalized code to get started</h5>
             <div class="row demo-code">
               <div class="col-xs-9 input-container">
                 <input type="text" required="" name="enterCode" placeholder="ENTER CODE" class="your-demo-code">
