--- a/views/index.html
+++ b/views/index.html
@@ -97,7 +97,7 @@
             {% if repName|length %}
             
             {% endif %}
-            {% if 2 === 2 %}
+            {% if customCode === '' %}
             <div class="row demo-code">
               <div class="col-md-3 rep-photo">
                 <svg id="4aa5eea2-ef9f-400f-ac2e-5f9c91abaabb" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="83.7" height="80.1" viewBox="0 0 83.7 80.1">
